--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -37,6 +37,8 @@ spec:
             - --edge-labels=node-role.kubernetes.io/edge
             # 根据所采用的CNI配置, 目前仅支持calico, flannel
             - --cni-type=calico
+            # 如果hairpinmode为true, 可以支持pod由service访问自身
+            - --agent-enable-edge-hairpinmode=true
             # 边缘节点的Pod使用的网段, 当使用Calico时必须配置，该网段不可与connector-subnets里的网段重叠
             - --edge-pod-cidr=10.10.0.0/16
             # 建议在边缘节点不能运行kube-proxy时启用
