--- a/deploy/helm-chart/templates/operator-svc.yaml
+++ b/deploy/helm-chart/templates/operator-svc.yaml
@@ -12,5 +12,5 @@ spec:
     - protocol: TCP
       port: 3030
       targetPort: 3030
-      nodePort: {{ .Values.apiServer.nodePort }}
+      nodePort: {{ .Values.apiServer.port }}
 {{- end }}
