helm-chart: update chart

--- a/deploy/helm-chart/templates/cert.yaml
+++ b/deploy/helm-chart/templates/cert.yaml
@@ -87,7 +87,7 @@ metadata:
     {{- include "cert.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
     "helm.sh/hook-weight": "-5"
 spec:
   template:
@@ -117,7 +117,7 @@ spec:
         - gen
         - api-server
         - --ips
-        - {{ .Values.apiServer.ip }}
+        - {{ include "connector.node.addresses" . }}
         - --secret-name
         - api-server-tls
         - -n
