--- a/deploy/helm-chart/templates/operator-deploy.yaml
+++ b/deploy/helm-chart/templates/operator-deploy.yaml
@@ -27,22 +27,37 @@ spec:
             {{- if eq .Values.operator.cluster.role "host" }}
             - --api-server-cert-file=/etc/fabedge/tls.crt
             - --api-server-key-file=/etc/fabedge/tls.key
+            - --api-server-listen-address={{ .Values.operator.operatorAPIServer.listenAddress.address }}:{{ .Values.operator.operatorAPIServer.listenAddress.port }}
             {{- end }}
             {{- if eq .Values.operator.cluster.role "member" }}
-            - --api-server-address=https://{{ .Values.apiServer.ip }}:{{ .Values.apiServer.port }}
-            {{- end }}
+            - --api-server-address={{ .Values.operator.hostOperatorAPIServer }}
             - --init-token={{ .Values.operator.initToken }}
-
+            {{- end }}
             - --edge-pod-cidr={{ .Values.operator.edgePodCIDR }}
-            - --cni-type={{ .Values.cniType }}
+            {{- $cniType := "" -}}
+            {{- range $index, $pod := (lookup "v1" "Pod" "" "").items -}}
+              {{- if hasPrefix "kube-flannel" $pod.metadata.name -}}
+                {{- $cniType = "flannel" -}}
+              {{- end -}}
+              {{- if hasPrefix "calico-node" $pod.metadata.name -}}
+                {{- $cniType = "calico" -}}
+              {{- end -}}
+            {{- end }}
+            - --cni-type={{ $cniType }}
             - --agent-image={{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag | default .Chart.AppVersion }}
             - --agent-strongswan-image={{ .Values.strongswan.image.repository }}:{{ .Values.strongswan.image.tag | default .Chart.AppVersion }}
             - --edge-labels={{ join "," .Values.operator.edgeLabels }}
             - --connector-public-addresses={{ join "," .Values.operator.connectorPublicAddresses }}
-            - --connector-subnets={{ join "," .Values.operator.connectorSubnets }}
+            - --connector-subnets={{ join "," .Values.operator.serviceClusterIPRanges }}
             - --endpoint-id-format=C=CN, O=fabedge.io, CN={node}
             - --agent-masq-outgoing={{ .Values.operator.masqOutgoing }}
-            - --agent-enable-proxy={{ .Values.operator.enableProxy }}
+            {{- $enableProxy := false -}}
+            {{- range $index, $crd := (lookup "apiextensions.k8s.io/v1" "CustomResourceDefinition" "" "").items -}}
+              {{- if eq $crd.metadata.name "devices.devices.kubeedge.io" -}}
+                {{- $enableProxy = true -}}
+              {{- end -}}
+            {{- end }}
+            - --agent-enable-proxy={{ $enableProxy }}
             - -v=5
           {{- if eq .Values.operator.cluster.role "host" }}
           ports:
