--- a/deploy/helm-chart/values.yaml
+++ b/deploy/helm-chart/values.yaml
@@ -1,7 +1,3 @@
-apiServer:
-  ip: 10.20.8.20
-  port: 30303
-
 operator:
   name: fabedge-operator
   replicas: 1
@@ -12,9 +8,18 @@ operator:
 
   initToken: 123456
 
+  operatorAPIServer:
+    listenAddress:
+      address: 0.0.0.0
+      port: 3030
+    nodePort: 30303
+
   cluster:
-    name: fabedge
-    role: host
+    name: beijing
+    role: member
+
+  hostOperatorAPIServer: https://1.1.1.1:30303
+
 
   # CIDR used by pods on edge nodes, modify it per your env.
   edgePodCIDR: 10.10.0.0/16
@@ -22,18 +27,12 @@ operator:
   # enable masquerade when edge pods access Internet
   masqOutgoing: true
 
-  # enable fabedge ipvs loadbalancer function
-  enableProxy: true
-
   # ip of connector accessible by the edge node
   connectorPublicAddresses:
   - 10.22.46.48
-  connectorNodeAddresses:
-  - 10.22.46.48
 
-  # CIDR used by pod & service in the cloud k8s cluster
-  connectorSubnets:
-  - 10.233.64.0/18
+  # CIDR used by service in the cloud k8s cluster
+  serviceClusterIPRanges:
   - 10.233.0.0/18
 
   edgeLabels:
@@ -55,8 +54,6 @@ operator:
   #  requests:
   #    cpu: 10m
   #    memory: 32Mi
-
-cniType: calico
 
 connector:
   name: fabedge-connector
