--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,38 +3,64 @@ name: build
 on:
   push:
     branches:
-      - main 
+      - main
     paths-ignore:
       - 'docs/**'
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+        - platforms: linux/amd64
+          tags: fabedge/installer
+          file: build/installer/Dockerfile
+
+        - platforms: linux/amd64,linux/arm64
+          tags: fabedge/strongswan
+          file: build/strongswan/Dockerfile
+
+        - platforms: linux/amd64,linux/arm64
+          tags: fabedge/connector
+          file: build/connector/Dockerfile
+
+        - platforms: linux/amd64,linux/arm64
+          tags: fabedge/operator
+          file: build/operator/Dockerfile
+
+        - platforms: linux/amd64,linux/arm64
+          tags: fabedge/agent
+          file: build/agent/Dockerfile
+
+        - platforms: linux/amd64,linux/arm64
+          tags: fabedge/cert
+          file: build/cert/Dockerfile
+
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16
 
     - name: Remove proxies
       run: |
         bash build/utils/no_proxy.sh
-        
-    - name: Build Images
-      run: |
-        make fabedge-images installer-image
 
-    - name: Push Images
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-        docker push fabedge/connector 
-        docker push fabedge/operator
-        docker push fabedge/agent
-        docker push fabedge/cert
-        docker push fabedge/installer
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        platforms: ${{ matrix.platforms }}
+        push: true
+        tags: ${{ matrix.tags }}
+        file: ${{ matrix.file }}
