--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,10 @@ jobs:
           tags: fabedge/cert
           file: build/cert/Dockerfile
 
+        - platforms: linux/amd64,linux/arm64,linux/arm/v7
+          tags: fabedge/cloud-agent
+          file: build/cloud-agent/Dockerfile
+
     steps:
     - uses: actions/checkout@v2
 
