--- a/deploy/helm-chart/templates/connector-deploy.yaml
+++ b/deploy/helm-chart/templates/connector-deploy.yaml
@@ -59,16 +59,7 @@ spec:
           image: {{ .Values.connector.image.repository }}:{{ .Values.connector.image.tag | default .Chart.AppVersion }}
           imagePullPolicy: {{ .Values.connector.image.pullPolicy }}
           args:
-            {{- $cniType := "" -}}
-            {{- range $index, $pod := (lookup "v1" "Pod" "" "").items -}}
-              {{- if hasPrefix "kube-flannel" $pod.metadata.name -}}
-                {{- $cniType = "flannel" -}}
-              {{- end -}}
-              {{- if hasPrefix "calico-node" $pod.metadata.name -}}
-                {{- $cniType = "calico" -}}
-              {{- end -}}
-            {{- end }}
-            - --cni-type={{ $cniType }}
+            - --cni-type={{ include "cniType" . }}
             - --sync-period={{ .Values.connector.syncPeriod }}
             - --connector-node-addresses={{ include "connector.node.addresses" . }}
             - -v=5
