--- a/deploy/crds/fabedge.io_clusters.yaml
+++ b/deploy/crds/fabedge.io_clusters.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: (devel)
+    controller-gen.kubebuilder.io/version: v0.7.0
   creationTimestamp: null
   name: clusters.fabedge.io
 spec:
@@ -17,6 +17,10 @@ spec:
   scope: Cluster
   versions:
   - additionalPrinterColumns:
+    - description: pod and service cidr list of cluster
+      jsonPath: .spec.cidrs
+      name: CIDRs
+      type: string
     - description: How long a community is created
       jsonPath: .metadata.creationTimestamp
       name: Age
@@ -41,7 +45,14 @@ spec:
             type: object
           spec:
             properties:
-              endPoints:
+              cidrs:
+                description: CIDRs is supposed to contain cluster-cidr and cluster-service-ip-range
+                  of a cluster, these are mainly used to create ippools to avoid SNAT
+                  in calico environment
+                items:
+                  type: string
+                type: array
+              endpoints:
                 description: Endpoints of connector and exported edge nodes of a cluster
                 items:
                   properties:
