--- a/deploy/connector.yaml
+++ b/deploy/connector.yaml
@@ -66,6 +66,7 @@ spec:
             - --cni-type=calico
             - --sync-period=1m
             - --connector-node-addresses=10.20.8.28
+            - --component=connector
             - -v=5
           volumeMounts:
             - name: var-run
